--- a/database.yml
+++ b/database.yml
@@ -1,14 +1,18 @@
-# Use root/example as user/password credentials
 version: '3.1'
 
 services:
 
   db:
-    image: mysql
+    image: mysql/mysql-server:latest
     command: --default-authentication-plugin=mysql_native_password
+    ports:
+      - 3306:3306
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: example
+       MYSQL_ROOT_PASSWORD: ''
+       MYSQL_DATABASE: 'db'
+       MYSQL_USER: 'user'
+       MYSQL_PASSWORD: ''
 
   adminer:
     image: adminer
